--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="og:image" content="https://pecora-japan.com/images/logo_black.png" />
+    <meta property="og:image" content="https://pecora-japan.com/images/logo_black.png" />
     <title>Music player</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="main.css" />
